--- a/sass/typography.sass
+++ b/sass/typography.sass
@@ -7,12 +7,12 @@
  *http://www.wtfpl.net/
  */
  
-$h1-fontsize: 2em;
-$h2-fontsize: 1.5em;
-$h3-fontsize: 1.17em;
-$h4-fontsize: 1em;
-$h5-fontsize: 0.83em;
-$h6-fontsize: 0.75em;
+$h1-fontsize: 2em
+$h2-fontsize: 1.5em
+$h3-fontsize: 1.17em
+$h4-fontsize: 1em
+$h5-fontsize: 0.83em
+$h6-fontsize: 0.75em
 
 $line-height: 1.5
 
